<resources>
    <string name="app_name">ArtSocialMedia</string>
    <string name="title_activity_home_screen">Home_Screen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Home_Button">Home</string>
    <string name="cart_button">cart</string>
    <string name="add_button">+</string>
    <string name="search_button">search</string>
    <string name="profile_button">Profile</string>
    <string name="login_title">LOGIN</string>
    <string name="signup_title">SIGNUP</string>
    <string name="signout_title">Sign Out</string>
    <string name="login_signup_enter_email">Email</string>
    <string name="login_signup_enter_first">First Name</string>
    <string name="login_signup_enter_second">Second Name</string>
    <string name="login_signup_enter_password">Password</string>
    <string name="login_signup_signupbtn">SIGNUP</string>
    <string name="login_signup_loginbtn">LOGIN</string>
    <string name="login_signup_guestbtn">GUEST</string>
    <string name="login_signup_signupexit_btn_text">Back</string>
    <string name="create_post">Create New Post</string>
    <string name="exit">x</string>
    <string name="createNewPostText">Add a description</string>
    <string name="postbtntext">Post</string>
    <string name="enterTitle">Title</string>
    <string name="enterPrice">Price</string>
    <string name="enterDesc">Description</string>
    <string name="deletePostBtnText">Delete</string>
    <string name="emptyStatment">Oh no its empty in here! &#128542;</string>
    <string name="alreadyhaveanaccountlogin">Already have an account?</string>
    <string name="continueWithGoogle">Continue with google</string>
    <string name="pickanimage">Choose Image</string>
    <string name="filter_type">Art Type</string>
    <string name="filter_type_painting">Painting</string>
    <string name="filter_type_drawing">Drawing</string>
    <string name="filter_type_sculpture">Sculpture</string>
    <string name="filter_type_print">PrintMaking</string>
    <string name="filter_type_photo">Photography</string>
    <string name="filter_type_film">Film</string>
    <string name="filter_type_archi">Architecture</string>
    <string name="filter_type_design">Design</string>
    <string name="filter_type_textile">Textiles</string>
    <string name="filter_type_ceramic">Ceramics</string>
    <string name="filter_type_any">Any</string>

</resources>