<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_yellow"
    tools:context=".activities.Signup"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="665dp"
        android:layout_height="1176dp"
        android:layout_marginStart="-130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253"
        app:srcCompat="@drawable/signup_background" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/signup_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:translationX="4dp"
        android:translationY="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitleBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/signup_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/darkNavy_accent"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddressSignup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkNavy_accent"
        android:ems="10"
        android:hint="@string/login_signup_enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/darkNavy_accent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterSecondNameSignup" />

    <EditText
        android:id="@+id/editTextTextPasswordSignup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="0dp"
        android:backgroundTint="@color/darkNavy_accent"
        android:textColorHint="@color/darkNavy_accent"
        android:ems="10"
        android:hint="@string/login_signup_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddressSignup"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddressSignup"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressSignup" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fully_rounded"

        android:elevation="12dp"
        android:text="@string/signup_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordSignup" />

    <EditText
        android:id="@+id/enterFirstNameSignup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_signup_enter_first"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/darkNavy_accent"
        android:textColorHint="@color/darkNavy_accent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddressSignup"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddressSignup"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/alreadyhaveanaccountlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupWithGoogleBtn" />

    <TextView
        android:id="@+id/goToLoginPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_title"
        android:textColor="#000EFF"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/signupWithGoogleBtn" />

    <EditText
        android:id="@+id/enterSecondNameSignup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:backgroundTint="@color/darkNavy_accent"
        android:textColorHint="@color/darkNavy_accent"
        android:hint="@string/login_signup_enter_second"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstNameSignup"
        app:layout_constraintStart_toStartOf="@+id/enterFirstNameSignup"
        app:layout_constraintTop_toBottomOf="@+id/enterFirstNameSignup" />

    <Button
        android:id="@+id/signupWithGoogleBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_grey"
        android:elevation="12dp"
        android:text="@string/continueWithGoogle"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/google_icon"

        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPasswordSignup"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPasswordSignup"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>