<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login_Activity"
    android:fitsSystemWindows="true">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="665dp"
        android:layout_height="1176dp"
        android:layout_marginStart="-130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/login_background" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="274dp"
        android:layout_height="126dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:translationX="4dp"
        android:translationY="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitleBackground"
        android:layout_width="274dp"
        android:layout_height="126dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/main_yellow"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterUserEmailLogin"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginTop="80dp"

        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/main_yellow"
        android:ems="10"
        android:hint="@string/login_signup_enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/main_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/enterUserPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="0dp"
        android:backgroundTint="@color/main_yellow"
        android:textColorHint="@color/main_yellow"
        android:ems="10"
        android:hint="@string/login_signup_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/enterUserEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/enterUserEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/enterUserEmailLogin" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/login_title"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/fully_rounded"
        android:elevation="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUserPasswordLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>